<resources>
    <string name="app_name">Just User Interface</string>
    <string name="title">WELCOME</string>
    <string name="signup_page">SIGNUP PAGE</string>
    <string name="my_calculator">MY CALCULATOR</string>
    <string name="mobile_app_assignments">MOBILE APP ASSIGNMENTS</string>
    <string name="counter">COUNTER</string>
    <string name="fragments_test">FRAGMENTS    TEST</string>
    <string name="question_4">QUESTION (4)</string>
    <string name="gender">GENDER:</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="stop_background_animation">STOP BACKGROUND ANIMATION</string>
    <string name="gestures_and_fragments">GESTURES AND FRAGMENTS</string>
    <string name="switchWord">SWITCH</string>
    <string name="color_picker">COLOR PICKER</string>
    <string name="change_background_color">PRESS TO CHANGE BACKGROUND COLOR</string>
    <string name="food_menu">FOOD MENU</string>
    <string name="swip_views">SWIP VIEWS</string>
    <string name="title_activity_swipv_views">SwipvViews</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_swip_views">SwipViews</string>
    <string name="title_activity_swip_view">SwipView</string>


</resources>